Fix bug in footer brand not aligned to centre

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -9,7 +9,8 @@
     }
 
     .footer {
-        .copyright {
+        .brand {
+            float: none;
             text-align: center;
         }
 
